<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_200">

    <TextView
        android:id="@+id/fragment_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/this_is_second_fragment"
        android:textColor="@color/purple_700"
        android:textSize="30sp"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/toFirst"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/hundred_dp"
        android:layout_marginTop="@dimen/hundred_dp"
        android:layout_marginEnd="@dimen/hundred_dp"
        android:text="@string/go_to_first"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_name" />

    <Button
        android:id="@+id/toThird"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/hundred_dp"
        android:layout_marginTop="@dimen/half_hundred_dp"
        android:layout_marginEnd="@dimen/hundred_dp"
        android:text="@string/go_to_third"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toFirst" />

</androidx.constraintlayout.widget.ConstraintLayout>